tests/NormalTests/paczka1/fuzzy1/44149003.err
Error in line 3: osCY A829 10,0
Error in line 8: K4DQ S574 4,6
Error in line 12: osCY S574 7,6
Error in line 37: K4DQ S759 85,5
